fix page overflow

--- a/src/components/UI/FlyingObject/FlyingObject.module.css
+++ b/src/components/UI/FlyingObject/FlyingObject.module.css
@@ -1,6 +1,6 @@
 :root {
     --grey-color: rgb(185, 185, 185);
-    --blue-color: rgb(183, 183, 247);
+    --blue-color: rgb(231, 241, 137);
 }
 
 .FlyingObject {
@@ -14,6 +14,8 @@
 .First {
     position: absolute;
     bottom: 20vh;
+    max-width: 50px;
+    max-height: 50px;
 }
 .First path {
     fill: var(--blue-color);
